Revert to Collections utils methods